BE: Added: return userId when query the table bloguser.
