# backend/swagger.json
@@ -25,12 +25,12 @@
           },
           {
             "in": "query",
-            "name": "startTimestamp",
+            "name": "cursor",
             "schema": {
               "type": "integer",
               "example": 1
             },
-            "description": "Return comments updated before the startTimestamp."
+            "description": "Return the cursor of the pagination."
           },
           {
             "in": "query",
@@ -67,9 +67,9 @@
                             "type": "string",
                             "description": "The date and time of the last update"
                           },
-                          "BlogUser.username": {
-                            "type": "string",
-                            "description": "The username of the author"
+                          "authorId": {
+                            "type": "integer",
+                            "description": "The id of the author"
                           }
                         }
                       }
@@ -152,6 +152,10 @@
                     "updatededAt": {
                       "type": "string",
                       "description": "The date and time of the last update"
+                    },
+                    "authorId": {
+                      "type": "integer",
+                      "description": "The id of the author"
                     }
                   }
                 }
@@ -714,6 +718,10 @@
                 "schema": {
                   "type": "object",
                   "properties": {
+                    "id": {
+                      "type": "integer",
+                      "description": "The registered user ID"
+                    },
                     "username": {
                       "type": "string",
                       "description": "The registered username"
@@ -760,6 +768,10 @@
                 "schema": {
                   "type": "object",
                   "properties": {
+                    "id": {
+                      "type": "integer",
+                      "description": "The user ID"
+                    },
                     "username": {
                       "type": "string",
                       "description": "User's username, max 64 characters"
@@ -844,6 +856,10 @@
                 "schema": {
                   "type": "object",
                   "properties": {
+                    "id": {
+                      "type": "integer",
+                      "description": "The user ID"
+                    },
                     "username": {
                       "type": "string",
                       "description": "The registered username"
@@ -935,6 +951,10 @@
                 "schema": {
                   "type": "object",
                   "properties": {
+                    "id": {
+                      "type": "integer",
+                      "description": "The logged-in user ID"
+                    },
                     "username": {
                       "type": "string",
                       "description": "The logged-in username"
@@ -1002,6 +1022,10 @@
                 "schema": {
                   "type": "object",
                   "properties": {
+                    "id": {
+                      "type": "integer",
+                      "description": "The registered user ID"
+                    },
                     "username": {
                       "type": "string",
                       "description": "The registered username"
@@ -1069,6 +1093,10 @@
                 "schema": {
                   "type": "object",
                   "properties": {
+                    "id": {
+                      "type": "integer",
+                      "description": "The registered user ID"
+                    },
                     "username": {
                       "type": "string",
                       "description": "The registered username"
